--- a/.github/workflows/cs2_default.yml
+++ b/.github/workflows/cs2_default.yml
@@ -16,7 +16,7 @@ jobs:
       REMOTE_PORT: ${{ secrets.DEPLOY_PORT }}
       ARGS: "-rltgoDzvO --delete"  
       SOURCE: "cs2_default"
-      TARGET: "/root/f/cs2/cs2_default/"    
+      TARGET: "/root/f/cs2/"    
 
     steps:
       - uses: actions/checkout@v2
