--- a/cs2_default/config.env
+++ b/cs2_default/config.env
@@ -9,8 +9,8 @@ CS2_SERVER_HIBERNATE=0      # (Put server in a low CPU state when there are no p
 CS2_LAN=0                   # (0 - LAN mode disabled, 1 - LAN Mode enabled)
 #CS2_RCONPW=changeme         # (RCON password)
 #CS2_PW                      # (Optional, CS2 server password)
-CS2_MAXPLAYERS=20           # (Max players)
-#CS2_ADDITIONAL_ARGS         # (Optional additional arguments to pass into cs2)
+CS2_MAXPLAYERS=10           # (Max players)
+CS2_ADDITIONAL_ARGS="sv_cheats 1"         # (Optional additional arguments to pass into cs2)
 #CS2_CFG_URL                 # HTTP/HTTPS URL to fetch a Tar Gzip bundle, Tar or Zip archive of configuration files/mod# Game modes
 CS2_GAMEALIAS=competitive               # (Game type, e.g. casual, competitive, deathmatch. See https://developer.valvesoftware.com/wiki/Counter-Strike_2/Dedicated_Servers)
 #CS2_GAMETYPE=0              # (Used if CS2_GAMEALIAS not defined. See https://developer.valvesoftware.com/wiki/Counter-Strike_2/Dedicated_Servers)
@@ -21,7 +21,7 @@ CS2_GAMEALIAS=competitive               # (Game type, e.g. casual, competitive, 
 #CS2_HOST_WORKSHOP_MAP=3070923343 #poolday        # The workshop map to use. If collection is also defined, this is the starting map.
 CS2_HOST_WORKSHOP_MAP=3226797269 #Mirage Night        # The workshop map to use. If collection is also defined, this is the starting map# Bots
 CS2_BOT_DIFFICULTY=3          # (0 - easy, 1 - normal, 2 - hard, 3 - expert)
-CS2_BOT_QUOTA=20               # (Number of bots)
+CS2_BOT_QUOTA=10               # (Number of bots)
 CS2_BOT_QUOTA_MODE=fill          # (fill, competitive)
 # TV
 TV_AUTORECORD=0             # Automatically records all games as CSTV demos: 0=off, 1=on.
