--- a/cs2_default/config.env
+++ b/cs2_default/config.env
@@ -2,7 +2,7 @@
 DEBUG=0                     # (0 - off, 1 - steamcmd, 2 - cs2, 3 - all)
 STEAMAPPVALIDATE=0          # (0 - no validation, 1 - enable validation)
 CS2_SERVERNAME=Mirage (octanium91)[UA]     # (Set the visible name for your private server.)
-#CS2_CHEATS=0                # (0 - disable cheats, 1 - enable cheats)
+CS2_CHEATS=1                # (0 - disable cheats, 1 - enable cheats)
 CS2_PORT=6915              # (CS2 server listen port tcp_udp)
 CS2_SERVER_HIBERNATE=0      # (Put server in a low CPU state when there are no players. 0 - hibernation disabled, 1 - hibernation enabled)
 #CS2_RCON_PORT               # (Optional, use a simple TCP proxy to have RCON listen on an alternative port. Useful for services like AWS Fargate which do not support mixed protocol ports.)
