--- a/cs2_default/config.env
+++ b/cs2_default/config.env
@@ -19,11 +19,11 @@ CS2_GAMEALIAS=competitive               # (Game type, e.g. casual, competitive, 
 #CS2_STARTMAP=de_dust2     # (Start map. Ignored if Workshop maps are defined.# Workshop Maps
 #CS2_HOST_WORKSHOP_COLLECTION # The workshop collection to use
 #CS2_HOST_WORKSHOP_MAP=3070923343 #poolday        # The workshop map to use. If collection is also defined, this is the starting map.
-#CS2_HOST_WORKSHOP_MAP=3226797269 #Mirage Night        # The workshop map to use. If collection is also defined, this is the starting map# Bots
+CS2_HOST_WORKSHOP_MAP=3226797269 #Mirage Night        # The workshop map to use. If collection is also defined, this is the starting map# Bots
 #CS2_HOST_WORKSHOP_MAP=3447707473 #Dust2 Night        # The workshop map to use. If collection is also defined, this is the starting map# Bots
-CS2_HOST_WORKSHOP_MAP=3346403247 #Office Tower        # The workshop map to use. If collection is also defined, this is the starting map# Bots
+#CS2_HOST_WORKSHOP_MAP=3346403247 #Office Tower        # The workshop map to use. If collection is also defined, this is the starting map# Bots
 CS2_BOT_DIFFICULTY=3          # (0 - easy, 1 - normal, 2 - hard, 3 - expert)
-CS2_BOT_QUOTA=10               # (Number of bots)
+CS2_BOT_QUOTA=0               # (Number of bots)
 CS2_BOT_QUOTA_MODE=fill          # (fill, competitive)
 # TV
 TV_AUTORECORD=0             # Automatically records all games as CSTV demos: 0=off, 1=on.
