--- a/cs2_default/docker-compose.yml
+++ b/cs2_default/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   db:
     image: mysql:9.3.0
     restart: unless-stopped
+    container_name: cs2-default-db
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: yes
     volumes:
@@ -12,6 +13,10 @@ services:
       options:
         tag: "cs2-default-sql"
         max-size: 256m
+    healthcheck:
+      test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
+      timeout: 20s
+      retries: 10
     deploy:
       resources:
         limits:
@@ -21,6 +26,9 @@ services:
   cs2-server:
     image: joedwards32/cs2:3.0.4
     restart: unless-stopped
+    depends_on:
+      db:
+        condition: service_healthy
     container_name: cs2-default
     env_file:
       - config.env
