--- a/beam-server/config.env
+++ b/beam-server/config.env
@@ -1,2 +1,6 @@
 # Server configuration
 BEAMMP_NAME=Octanium91
+BEAMMP_DESCRIPTION=PNX
+BEAMMP_MAX_CARS=1
+BEAMMP_MAX_PLAYERS=10
+BEAMMP_MAP=/levels/Utah/info.json
