beam server change settings

--- a/beam-server/config.env
+++ b/beam-server/config.env
@@ -1,6 +1,7 @@
 # Server configuration
 BEAMMP_NAME=Octanium91
 BEAMMP_DESCRIPTION=PNX
-BEAMMP_MAX_CARS=1
-BEAMMP_MAX_PLAYERS=10
+BEAMMP_MAX_CARS=10
+BEAMMP_MAX_PLAYERS=20
 BEAMMP_MAP=/levels/Utah/info.json
+BEAMMP_PRIVATE=false
